Better take advantage of properties, separate out logic vs display
Generally speaking, JavaFX projects should follow a MVC (Model-View-Controller) design principle where the data, what's shown to the user, and the mediator between those two, are all as separate as possible. By taking better advantage of properties from JavaFX, we can achieve this. This commit works towards doing this by creating unique components for bin displays and the bin display list, as well as shuffling around a lot of data and working with property bindings.

This is a massive rewrite for the display aspect of this project, but there is still so much work left to do.